plugins {
    id 'java'
    id 'jacoco'
}

group = 'ru.nsu.ermakov'
version = '1.0-SNAPSHOT'

repositories {
    mavenCentral()
}

dependencies {
    testImplementation platform('org.junit:junit-bom:5.9.1')
    implementation 'com.fasterxml.jackson.core:jackson-databind:2.15.2'
    testImplementation 'org.junit.jupiter:junit-jupiter'
}

test {
    useJUnitPlatform()
}

jacocoTestReport {
    dependsOn test
    reports {
        xml.required = true
        html.required = true
    }
}
tasks.withType(JavaCompile).configureEach {
    options.compilerArgs += ['--enable-preview']
}

tasks.withType(Test).configureEach {
    jvmArgs += ['--enable-preview']
}

tasks.withType(JavaExec).configureEach {
    jvmArgs += ['--enable-preview']
}
tasks.withType(Javadoc).configureEach {
    options.encoding = 'UTF-8'

    if (JavaVersion.current().isJava11Compatible()) {
        options.addStringOption('Xdoclint:none', '-quiet')
    }

    options.release = 21
}